--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
 
 
       <span class="banner-fix"></span>
+      <span id="main_content">  
+          <p>Okay let's see if this works</p>
+      </span>
 <!--
 
       <section id="main_content">
