--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
       <span class="banner-fix"></span>
       <span id="main_content">  
           <p>Okay let's see if this works</p>
+          <p>How about this</p>
+            
       </span>
 <!--
 
